fix: text color of header on mobile (#38)
When the dark mode is on and on the mobile, the header text color
is also dark, we should change it to light color for the contrast.

--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -3,6 +3,16 @@ $dark-text-color: #bbb !default;
 
 html[data-theme="dark"]  {
   &[data-scroll-status='top'] {
+    header.site-header-transparent {
+      &.site-header {
+        @include media-query($on-laptop) {
+          .page-link {
+            color: #f8f8f8;
+          }
+        }
+      }
+    }
+
     footer.site-footer {
       .site-footer-inner {
         border-top: solid 1px #2f2f2f !important;
